# torchpoly

./: .gitignore  README.md  parse_onnx.py  pyproject.toml  reproduce.py  run_benchmark.py  workspace.py
deeppoly/: base.py  linear.py  postcondition.py  relu.py  sequencial.py
examples/: train_and_verify.ipynb
tests/: test_torchpoly.py
tests/cert/: test_verifier.py
tests/nn/: test_activation.py  test_container.py  test_linear.py
tools/: vnncomp.py
torchpoly/: __init__.py  verifier.py
torchpoly/cert/: __init__.py  certificate.py  ticket.py  verifier.py
torchpoly/nn/: __init__.py  activation.py  container.py  linear.py  module.py
torchpoly/onnx/: __init__.py  utils.py
