[tool.poetry]
name = "torchpoly"
version = "0.1.0"
description = ""
authors = ["yanglsh <yanglsh@shanghaitech.edu.cn>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
onnx = "^1.16.1"
onnx2pytorch = "^0.4.1"
vnnlib = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
